Refactor Spring Boot instruction files into a new `copilot-rules` directory and add new rule topics.