@@ -7,9 +7,9 @@
 ```java
 // DO: Reuse immutable objects
 public class DateUtils {
-    private static final DateTimeFormatter ISO_DATE_FORMATTER = 
+    private static final DateTimeFormatter ISO_DATE_FORMATTER =
         DateTimeFormatter.ISO_LOCAL_DATE;  // Reuse, thread-safe
-    
+
     public static String formatDate(LocalDate date) {
         return ISO_DATE_FORMATTER.format(date);  // No new formatter each time
     }
@@ -18,11 +18,11 @@ public class DateUtils {
 // DO: Use StringBuilder for string concatenation in loops
 public String buildReport(List<String> items) {
     StringBuilder sb = new StringBuilder(items.size() * 50);  // Estimate capacity
-    
+
     for (String item : items) {
         sb.append(item).append("\n");  // Efficient
     }
-    
+
     return sb.toString();
 }
 
@@ -33,7 +33,7 @@ String path = "/users/" + userId;  // Simple concatenation is fine
 // DO: Object pooling for expensive objects (when appropriate)
 @Configuration
 public class DatabaseConfiguration {
-    
+
     @Bean
     public DataSource dataSource() {
         HikariConfig config = new HikariConfig();
@@ -57,6 +57,7 @@ public class ScoreCalculator {
 ```
 
 **When to use:**
+
 - Primitive types: Performance-critical code, large arrays
 - StringBuilder: String concatenation in loops
 - Object pools: Database connections, thread pools
@@ -93,7 +94,7 @@ public String formatDate(LocalDate date) {
 }
 
 // Better: Reuse formatter
-private static final DateTimeFormatter DATE_FORMATTER = 
+private static final DateTimeFormatter DATE_FORMATTER =
     DateTimeFormatter.ofPattern("yyyy-MM-dd");
 
 public String formatDate(LocalDate date) {
@@ -158,12 +159,12 @@ public List<User> loadUsers(int expectedCount) {
 // DO: Use immutable collections to save memory
 public class ConfigurationService {
     // These won't change after initialization
-    private static final List<String> ALLOWED_ROLES = 
+    private static final List<String> ALLOWED_ROLES =
         List.of("ADMIN", "USER", "GUEST");  // Compact, immutable
-    
-    private static final Set<String> SUPPORTED_CURRENCIES = 
+
+    private static final Set<String> SUPPORTED_CURRENCIES =
         Set.of("USD", "EUR", "GBP");
-    
+
     private static final Map<String, String> ERROR_CODES = Map.of(
         "001", "Invalid input",
         "002", "Not found",
@@ -174,14 +175,14 @@ public class ConfigurationService {
 // DO: Clear collections when done
 @Service
 public class BatchProcessor {
-    
+
     public void processBatch(List<Item> items) {
         List<Result> results = new ArrayList<>(items.size());
-        
+
         for (Item item : items) {
             results.add(process(item));
         }
-        
+
         sendResults(results);
         results.clear();  // Help GC, especially if this object is reused
     }
@@ -189,7 +190,7 @@ public class BatchProcessor {
 
 // DO: Use EnumMap/EnumSet for enum keys
 public class StateMachine {
-    private final Map<State, List<State>> transitions = 
+    private final Map<State, List<State>> transitions =
         new EnumMap<>(State.class);  // More efficient than HashMap for enums
 }
 
@@ -205,6 +206,7 @@ public void processLargeFile(Path file) throws IOException {
 ```
 
 **When to use:**
+
 - ArrayList with capacity: Known or estimated size
 - Immutable collections: Constants, unmodifiable data
 - EnumMap/EnumSet: Enum keys/values
@@ -251,11 +253,11 @@ public List<String> generateIds(int count) {
 @Service
 public class CacheService {
     private List<User> allUsers;  // Held in memory always!
-    
+
     public void initialize() {
         allUsers = userRepository.findAll();  // Millions of users
     }
-    
+
     public User findUser(String id) {
         return allUsers.stream()
                       .filter(u -> u.getId().equals(id))
@@ -267,7 +269,7 @@ public class CacheService {
 // Better: Use proper cache or database queries
 @Service
 public class CacheService {
-    
+
     @Cacheable("users")
     public User findUser(String id) {
         return userRepository.findById(id).orElse(null);
@@ -278,7 +280,7 @@ public class CacheService {
 // DON'T: Keep collections of deleted data
 public class OrderProcessor {
     private final List<Order> processedOrders = new ArrayList<>();
-    
+
     public void process(Order order) {
         // Process order
         processedOrders.add(order);  // Grows forever!
@@ -323,17 +325,17 @@ public void copyFile(Path source, Path target) throws IOException {
 // DO: Custom AutoCloseable for resource cleanup
 public class DatabaseSession implements AutoCloseable {
     private final Connection connection;
-    
+
     public DatabaseSession() throws SQLException {
         this.connection = DriverManager.getConnection(dbUrl);
     }
-    
+
     public void execute(String sql) throws SQLException {
         try (Statement stmt = connection.createStatement()) {
             stmt.execute(sql);
         }
     }
-    
+
     @Override
     public void close() throws SQLException {
         if (connection != null && !connection.isClosed()) {
@@ -351,7 +353,7 @@ try (DatabaseSession session = new DatabaseSession()) {
 @Component
 public class CacheManager {
     private final Cache cache;
-    
+
     @PreDestroy
     public void cleanup() {
         if (cache != null) {
@@ -363,6 +365,7 @@ public class CacheManager {
 ```
 
 **When to use:**
+
 - Try-with-resources: Always for AutoCloseable resources
 - @PreDestroy: Spring bean cleanup
 - Custom AutoCloseable: Resources needing cleanup
@@ -382,7 +385,7 @@ public String readFile(Path path) throws IOException {
 // DON'T: Close only on success path
 public void processFile(Path path) throws IOException {
     InputStream in = Files.newInputStream(path);
-    
+
     if (validate(in)) {
         process(in);
         in.close();  // Only closed if validate() returns true!
@@ -403,11 +406,11 @@ public void processFile(Path path) throws IOException {
 @Service
 public class FileProcessor {
     private BufferedReader reader;  // BAD - when is this closed?
-    
+
     public void initialize(Path file) throws IOException {
         reader = Files.newBufferedReader(file);
     }
-    
+
     public String readLine() throws IOException {
         return reader.readLine();
     }
@@ -416,7 +419,7 @@ public class FileProcessor {
 // Better: Open and close in same scope
 @Service
 public class FileProcessor {
-    
+
     public List<String> processFile(Path file) throws IOException {
         try (BufferedReader reader = Files.newBufferedReader(file)) {
             return reader.lines()
@@ -441,18 +444,18 @@ public class FileProcessor {
 // DO: Spring Cache for expensive operations
 @Service
 public class ProductService {
-    
+
     @Cacheable(value = "products", key = "#id")
     public Product findById(String id) {
         return productRepository.findById(id)
             .orElseThrow(() -> new ResourceNotFoundException("Product", id));
     }
-    
+
     @CacheEvict(value = "products", key = "#product.id")
     public Product update(Product product) {
         return productRepository.save(product);
     }
-    
+
     @CacheEvict(value = "products", allEntries = true)
     public void clearCache() {
         // Clears entire product cache
@@ -462,7 +465,7 @@ public class ProductService {
 // DO: Caffeine cache for fine-grained control
 @Configuration
 public class CacheConfiguration {
-    
+
     @Bean
     public CacheManager cacheManager() {
         CaffeineCacheManager cacheManager = new CaffeineCacheManager("products", "users");
@@ -478,14 +481,14 @@ public class CacheConfiguration {
 @Service
 public class ConfigService {
     private final LoadingCache<String, Configuration> cache;
-    
+
     public ConfigService() {
         this.cache = Caffeine.newBuilder()
             .maximumSize(100)
             .expireAfterWrite(5, TimeUnit.MINUTES)
             .build(key -> loadConfiguration(key));  // Load on miss
     }
-    
+
     public Configuration getConfig(String key) {
         return cache.get(key);  // Load from cache or source
     }
@@ -493,9 +496,9 @@ public class ConfigService {
 
 // DO: Weak references for memory-sensitive caches
 public class ImageCache {
-    private final Map<String, SoftReference<BufferedImage>> cache = 
+    private final Map<String, SoftReference<BufferedImage>> cache =
         new ConcurrentHashMap<>();
-    
+
     public BufferedImage get(String key) {
         SoftReference<BufferedImage> ref = cache.get(key);
         if (ref != null) {
@@ -513,6 +516,7 @@ public class ImageCache {
 ```
 
 **When to use:**
+
 - @Cacheable: Expensive database queries, external API calls
 - Caffeine: Fine-grained control, eviction policies
 - SoftReference: Large objects, memory-sensitive caches
@@ -527,7 +531,7 @@ public class ImageCache {
 @Service
 public class UserCache {
     private final Map<String, User> cache = new ConcurrentHashMap<>();
-    
+
     public User getUser(String id) {
         return cache.computeIfAbsent(id, this::loadUser);
         // Grows forever! Memory leak
@@ -543,7 +547,7 @@ private final LoadingCache<String, User> cache = Caffeine.newBuilder()
 // DON'T: Cache user-specific data globally
 @Service
 public class OrderService {
-    
+
     @Cacheable("orders")  // BAD - cached across all users!
     public List<Order> getUserOrders(String userId) {
         return orderRepository.findByUserId(userId);
@@ -561,7 +565,7 @@ public List<Order> getUserOrders(String userId) {
 @Service
 public class ProductCache {
     private final Map<String, Product> cache = new HashMap<>();
-    
+
     public Product getProduct(String id) {
         return cache.computeIfAbsent(id, productRepository::findById);
         // Never evicted - stale data forever
@@ -611,14 +615,14 @@ public UserDto getUser(String id) {
 // DO: Lazy initialization for expensive objects
 public class ReportGenerator {
     private HeavyResource resource;
-    
+
     private HeavyResource getResource() {
         if (resource == null) {
             resource = new HeavyResource();  // Created only when needed
         }
         return resource;
     }
-    
+
     public Report generate() {
         return getResource().createReport();
     }
@@ -627,7 +631,7 @@ public class ReportGenerator {
 // DO: Double-checked locking for thread-safe lazy init
 public class ConfigurationManager {
     private volatile Configuration config;
-    
+
     public Configuration getConfig() {
         if (config == null) {  // First check (no lock)
             synchronized (this) {
@@ -642,13 +646,13 @@ public class ConfigurationManager {
 
 // DO: Lazy initialization holder class (best for singletons)
 public class DatabaseConnection {
-    
+
     private DatabaseConnection() {}
-    
+
     private static class Holder {
         private static final DatabaseConnection INSTANCE = new DatabaseConnection();
     }
-    
+
     public static DatabaseConnection getInstance() {
         return Holder.INSTANCE;  // Lazy, thread-safe, efficient
     }
@@ -658,7 +662,7 @@ public class DatabaseConnection {
 @Service
 @Lazy  // Not created until first use
 public class HeavyService {
-    
+
     public HeavyService() {
         // Expensive initialization
     }
@@ -666,6 +670,7 @@ public class HeavyService {
 ```
 
 **When to use:**
+
 - Expensive objects not always needed
 - Singletons (initialization holder pattern)
 - Optional dependencies
@@ -679,7 +684,7 @@ public class HeavyService {
 // DON'T: Broken lazy init in multi-threaded environment
 public class ResourceManager {
     private HeavyResource resource;
-    
+
     public HeavyResource getResource() {
         if (resource == null) {  // Race condition!
             resource = new HeavyResource();  // Could be created multiple times
@@ -694,7 +699,7 @@ public class ResourceManager {
 @Service
 public class UserService {
     private EmailService emailService;  // Lazy field
-    
+
     private EmailService getEmailService() {
         if (emailService == null) {
             emailService = new EmailService();  // DON'T - bypasses Spring!
@@ -707,7 +712,7 @@ public class UserService {
 @Service
 public class UserService {
     private final EmailService emailService;
-    
+
     public UserService(@Lazy EmailService emailService) {
         this.emailService = emailService;  // Spring manages lazy init
     }
@@ -716,7 +721,7 @@ public class UserService {
 // DON'T: Over-complicate simple cases
 public class SimpleService {
     private String message;
-    
+
     public String getMessage() {
         if (message == null) {  // Unnecessary lazy init
             message = "Hello";  // Simple String
@@ -728,7 +733,7 @@ public class SimpleService {
 // Better: Just initialize
 public class SimpleService {
     private final String message = "Hello";
-    
+
     public String getMessage() {
         return message;
     }
@@ -738,3 +743,119 @@ public class SimpleService {
 **When this appears:** Premature optimization, threading issues.
 
 **Why it's wrong:** Thread-safety issues, unnecessary complexity, bypasses framework features.
+
+---
+
+## 6. Virtual Threads (Java 21) - Memory Benefits
+
+### ✅ DO: Use virtual threads to reduce memory per connection
+
+```java
+// DO: Virtual threads for high-concurrency with low memory footprint
+// Platform threads: ~1MB stack each (1000 threads = ~1GB memory)
+// Virtual threads: ~KB each (1,000,000+ threads possible)
+
+@Configuration
+public class VirtualThreadConfiguration {
+
+    @Bean
+    public TomcatProtocolHandlerCustomizer<?> protocolHandlerVirtualThreadExecutorCustomizer() {
+        return protocolHandler -> {
+            protocolHandler.setExecutor(Executors.newVirtualThreadPerTaskExecutor());
+        };
+    }
+}
+
+// DO: Virtual threads for batch processing
+@Service
+public class BulkEmailService {
+
+    public void sendBulkEmails(List<Email> emails) {
+        // Instead of thread pool limiting concurrency
+        try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+            List<Future<Void>> futures = emails.stream()
+                .map(email -> executor.submit(() -> {
+                    sendEmail(email);
+                    return null;
+                }))
+                .toList();
+
+            // Wait for all
+            for (Future<Void> f : futures) {
+                try { f.get(); } catch (Exception e) { log.warn("Email failed", e); }
+            }
+        }
+        // Memory: ~KB per email vs ~1MB per platform thread
+    }
+}
+
+// DO: Spring Boot 3.2+ native virtual thread support
+# application.yml
+spring:
+  threads:
+    virtual:
+      enabled: true  # Enables virtual threads for web requests
+```
+
+**Memory comparison:**
+| Scenario | Platform Threads | Virtual Threads |
+|----------|------------------|-----------------|
+| 1,000 concurrent requests | ~1 GB | ~10 MB |
+| 10,000 concurrent requests | ~10 GB (impossible) | ~100 MB |
+
+### ❌ DON'T: Use virtual threads for CPU-bound work
+
+```java
+// DON'T: Virtual threads for computation
+public List<Result> compute(List<Data> items) {
+    try (var executor = Executors.newVirtualThreadPerTaskExecutor()) {
+        return items.stream()
+            .map(item -> executor.submit(() -> heavyCpuCalculation(item)))
+            .map(Future::join)
+            .toList();
+    }
+    // Virtual threads don't help CPU-bound work - no memory benefit
+}
+
+// Better: Use parallel streams or ForkJoinPool for CPU work
+public List<Result> compute(List<Data> items) {
+    return items.parallelStream()
+        .map(this::heavyCpuCalculation)
+        .toList();
+}
+```
+
+---
+
+## 7. JVM Tuning Tips
+
+### ✅ DO: Configure JVM for memory efficiency
+
+```bash
+# String deduplication for apps with many duplicate strings
+java -XX:+UseStringDeduplication -jar app.jar
+
+# Compact strings (enabled by default in Java 9+)
+java -XX:+CompactStrings -jar app.jar
+
+# G1GC for large heaps (default in Java 11+)
+java -XX:+UseG1GC -Xmx4g -jar app.jar
+
+# ZGC for low-latency (Java 21+)
+java -XX:+UseZGC -Xmx4g -jar app.jar
+```
+
+```java
+// DO: Use trimToSize() for finalized ArrayLists
+public List<User> loadUsers() {
+    ArrayList<User> users = new ArrayList<>(1000);
+    // Load users...
+    users.trimToSize();  // Release unused capacity
+    return Collections.unmodifiableList(users);
+}
+
+// DO: Use records for value objects (more GC-friendly)
+// Records have compact memory layout and simpler object graph
+public record Point(int x, int y) {}  // Smaller than class equivalent
+public record Money(BigDecimal amount, String currency) {}
+```
